--- a/web/styles/message.css
+++ b/web/styles/message.css
@@ -1,11 +1,21 @@
 .my-message {
-    bottom: 70px;
-    display: block;
-    border-radius: 10px 10px 0 10px;
-    font-size: .85rem;
+    border-radius: 15px 15px 0 15px;
     background: rgb(250, 250, 250);
+}
+
+.bot-message {
+    border-radius: 0 15px 15px 15px;
+    background: #dcf8c6;
+}
+
+.message {
     position: absolute;
     right: 0;
     margin: 10px;
+    font-size: .85rem;
     padding: .5rem;
+    word-break: break-all;
+    max-width: 75%;
+    bottom: 70px;
+    display: block;
 }
